fix bug dots not centered pictureModal, add scss file for UserProfile

--- a/client/src/Sass/components/Modal.scss
+++ b/client/src/Sass/components/Modal.scss
@@ -116,3 +116,9 @@
   border-radius: 10px;
   background-color: #ffffff;
 }
+
+.pictureModal {
+  & ul {
+    display: block;
+  }
+}
